Changed the StartupServlet to SearchServlet and added a search method. Updated Jep to use another Maven repository and the version to 2.4.0. Published the application to CloudBees.
git-svn-id: http://ikube.googlecode.com/svn/trunk@340 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/configuration/spring-test.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-test.properties
@@ -1,7 +1,7 @@
 #Configuration details for individual instances
-delay=6000000
-period=6000000
-max.age=36000000
+delay=60000
+period=600000
+max.age=600
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -25,10 +25,10 @@ monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
-url=http://www.ikokoon.eu/ikokoon/index.html
+url=http://ikube.ikube.cloudbees.net/index.html
 jdbc.batch.size=10
 internet.batch.size=25
-table.handler.threads=3
+table.handler.threads=1
 internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -45,6 +45,10 @@ index.directory.path=./indexes
 index.directory.path.one=${index.directory.path}/one
 index.directory.path.two=${index.directory.path}/two
 index.directory.path.three=${index.directory.path}/three
+
+analyzed=true
+stored=true
+vectored=true
 
 #General JDBC settings
 jdbc.minPoolSize=10
