--- a/pom.xml
+++ b/pom.xml
@@ -316,13 +316,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
@@ -435,30 +435,6 @@
 		<!--<dependency> <groupId>oracle.ojdbc6</groupId> <artifactId>ojdbc6</artifactId> <version>11</version> <type>jar</type> <scope>runtime</scope> 
 			</dependency> -->
 		<dependency>
-			<groupId>org.apache.jcs</groupId>
-			<artifactId>jcs</artifactId>
-			<version>1.3</version>
-			<type>pom</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>jcs</groupId>
-			<artifactId>jcs</artifactId>
-			<version>1.3</version>
-			<type>jar</type>
-			<scope>compile</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>xerces</artifactId>
-					<groupId>xerces</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xerces</artifactId>
-					<groupId>xercesImpl</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
 			<version>1.9</version>
@@ -486,17 +462,24 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>jep</groupId>
 			<artifactId>jep</artifactId>
 			<version>2.24</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>com.beoui</groupId>
 			<artifactId>geocell</artifactId>
 			<version>0.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nfunk</groupId>
+			<artifactId>jep</artifactId>
+			<version>2.4.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -540,6 +523,11 @@
 			<id>javageomodel-repo</id>
 			<name>GeocellJava Repository</name>
 			<url>http://javageomodel.googlecode.com/svn/repository</url>
+		</repository>
+		<repository>
+			<id>FreeHep</id>
+			<name>Free Hep Repository</name>
+			<url>http://java.freehep.org/maven2/</url>
 		</repository>
 	</repositories>
 
