--- a/pom.xml
+++ b/pom.xml
@@ -481,6 +481,16 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+ 			<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-spatial</artifactId>
+				<version>3.0.2</version>
+			</dependency>
+			<dependency>
+ 			<groupId>org.apache.lucene</groupId>
+ 			<artifactId>lucene-misc</artifactId>
+ 			<version>3.0.2</version>
+			</dependency>
 	</dependencies>
 
 	<repositories>
