Updated the search servlet. Added some notes. Updated the test properties.
git-svn-id: http://ikube.googlecode.com/svn/trunk@342 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/configuration/spring-test.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-test.properties
@@ -26,6 +26,8 @@ throttle=0
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
 url=http://ikube.ikube.cloudbees.net/index.html
+ikokoon.url=http://ikokoon.ikube.cloudbees.net/index.html
+
 jdbc.batch.size=10
 internet.batch.size=25
 table.handler.threads=1
