Fixing PMD warnings.
git-svn-id: http://ikube.googlecode.com/svn/trunk@345 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/configuration/spring-test.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-test.properties
@@ -1,6 +1,6 @@
 #Configuration details for individual instances
-delay=60000
-period=600000
+delay=600000
+period=6000000
 max.age=600
 
 #Eventually we want to set this to about 10 milliseconds and
