--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -96,8 +94,6 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
-		<!--<dependency> <groupId>org.springbyexample</groupId> <artifactId>org.springbyexample.dynamic.tiles2</artifactId> <version>1.2</version> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -156,6 +152,20 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
@@ -291,9 +301,20 @@
 			<type>jar</type>
 			<scope>runtime</scope>
 		</dependency>
-		<!--<dependency> <groupId>com.ibm.db2.jcc</groupId> <artifactId>db2jcc</artifactId> <version>9.5</version> <type>jar</type> <scope>runtime</scope> 
-			</dependency> <dependency> <groupId>com.ibm.db2.jcc_license_cu</groupId> <artifactId>db2jcc_license_cu</artifactId> <version>9.5</version> <type>jar</type> 
-			<scope>runtime</scope> </dependency> -->
+		<dependency>
+			<groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>db2jcc</artifactId>
+			<version>9.5</version>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.db2.jcc_license_cu</groupId>
+			<artifactId>db2jcc_license_cu</artifactId>
+			<version>9.5</version>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -329,13 +350,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!--<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>-->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
@@ -418,13 +432,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>jgroups</groupId>
-			<artifactId>jgroups</artifactId>
-			<version>2.8.0.GA</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
 			<version>1.3.1</version>
@@ -445,8 +452,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!--<dependency> <groupId>oracle.ojdbc6</groupId> <artifactId>ojdbc6</artifactId> <version>11</version> <type>jar</type> <scope>runtime</scope> 
-			</dependency> -->
+		<dependency>
+			<groupId>oracle.ojdbc6</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11</version>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
@@ -475,13 +487,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!--<dependency>
-			<groupId>jep</groupId>
-			<artifactId>jep</artifactId>
-			<version>2.24</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>-->
 		<dependency>
 			<groupId>com.beoui</groupId>
 			<artifactId>geocell</artifactId>
@@ -495,15 +500,15 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
- 			<groupId>org.apache.lucene</groupId>
-				<artifactId>lucene-spatial</artifactId>
-				<version>3.0.2</version>
-			</dependency>
-			<dependency>
- 			<groupId>org.apache.lucene</groupId>
- 			<artifactId>lucene-misc</artifactId>
- 			<version>3.0.2</version>
-			</dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spatial</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-misc</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
