Updated the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@348 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -14,6 +14,7 @@ index.directory.path.three=${index.directory.path}/three
 url=http://ikokoon.ikube.cloudbees.net/index.html
 faq.predicate=where faq.faqid < 100000 and published = 1
 patient.predicate=where patient.id > 0
+files.path=./code/core/src/test/resources/data/files
 
 throttle=0
 
