--- a/code/core/src/main/resources/META-INF/common/integration/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/integration/spring.properties
@@ -1,9 +1,3 @@
-
-# The maximum age of the indexes
-max.age=36000000
-
-
-
 searcher.index.name=index
 searcher.field.name=answer
 searcher.fragment=true
@@ -12,98 +6,8 @@ searcher.search.string=answer clinch crackerjack books gall thorough going tall 
 searcher.start.index=0
 searcher.end.index=101
 
-analyzed=true
-stored=true
-vectored=true
-
-
-
-# The batch size for fetching records from the database
-jdbc.batch.size=1000
-internet.batch.size=100
-
-
-
-# The path to the files to be indexed
-files.path=D:/apache-tomcat-6.0.26
-
-# To limit the results
-faq.predicate=where faq.faqid < 100000 and published = 1
-
-# The time delay between reads in the crawler
-throttle=0
-# The first seed url for internet crawling
-# http://www.ikokoon.eu/ikokoon/index.html
-# http://www.oki.com/
-# http://localhost/million/adapt.html
-url=http://www.ikokoon.eu/ikokoon/index.html
-
-# Lucene properties:
-buffer.size=256
-compound.file=true
-merge.factor=100
-buffered.docs=100
-max.field.length=100000
-max.read.length=1000000
-
-# The path for the index(s)
-index.directory.path=./indexes
-
-# General JDBC settings
-jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
-jdbc.maxStatements=1000
-jdbc.checkOutTimeout=60000
-jdbc.numHelperThreads=1
-
-# DB2 database
-jdbc.name=DB2
-jdbc.driver.type=4
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
-jdbc.port=50000
-jdbc.server=localhost
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
-
-# Oracle database
-# jdbc.user=XE
-# jdbc.password=admin
-# jdbc.driver.type=4
-# jdbc.driver=oracle.jdbc.driver.OracleDriver
-# jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
-# jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
-# jdbc.database=XE
-# jdbc.server=ikube
-# jdbc.port=1521
-# jdbc.schema=XE
-
-
-
-
-
-# The delay before the scheduled tasks start executing
-delay=10000
-# The period between notifications for timed tasks
-period=60000
-
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
 # the search operations and clients
-web.service.delay=1000000
-web.service.period=1000000
-
-# The number of threads for each indexing component
-table.handler.threads=3
-internet.handler.threads=3
-filesystem.handler.threads=1
-email.handler.threads=1
-
-service.protocol=http
-service.port=8081
-monitoring.service.port=8090
-web.service.path=/ikube/service/ISearcherWebService?wsdl
-monitoring.service.path=/ikube/service/IMonitoringService?wsdl
+web.service.delay=300000
+web.service.period=300000
