--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,6 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!--<dependency> <groupId>org.apache.tomcat</groupId> <artifactId>jsp-api</artifactId> <version>6.0.29</version> <type>jar</type> <scope>provided</scope> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -537,6 +535,13 @@
 			<version>3.5.1</version>
 			<type>jar</type>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>6.0.29</version>
+			<type>jar</type>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
