Updated the integration tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@354 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -76,12 +76,10 @@
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
+					<!--<skipTests>true</skipTests>-->
 					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
-						<exclude>**/DataBaseOdbTest.java</exclude>
-						<exclude>**/DataBaseOdbMapStoreTest.java</exclude>
-						<exclude>**/SynchronizeTest.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
