--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,4 +1,4 @@
-max.age=600
+max.age=180
 
 buffer.size=128
 compound.file=true
@@ -6,14 +6,11 @@ merge.factor=10
 buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./indexes
-index.directory.path.one=${index.directory.path}/one
-index.directory.path.two=${index.directory.path}/two
-index.directory.path.three=${index.directory.path}/three
+index.directory.path=D:/cluster/indexes
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
-faq.predicate=where faq.faqid < 100000 and published = 1
-patient.predicate=where patient.id > 0
+faq.predicate=where faq.faqid > 0 and published = 1
+patient.predicate=where patient.id > 0 and patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 
 throttle=0
