Updated the poms.
git-svn-id: http://ikube.googlecode.com/svn/trunk@360 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -14,7 +14,7 @@
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
 		<version>1.0.1-SNAPSHOT</version>
-		<relativePath>../../../ikube</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<properties>
