--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<junit.version>4.8.2</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<targetJdk>1.6</targetJdk>
-		
+
 		<write.classes>-Dwrite.classes=false</write.classes>
 		<clean.classes>-Dclean.classes=false</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
@@ -97,17 +97,24 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.1</version>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
-					<forkMode>once</forkMode>
-					<!--<skipTests>true</skipTests>-->
-					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
-					<excludes>
-						<exclude>**/TextParserTest.java</exclude>
-					</excludes>
+					<argLine></argLine>
+					<includes>
+						<include>**/*Integration*.java</include>
+					</includes>
 				</configuration>
+				<executions>
+					<execution>
+						<id>failsafe</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
