--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -19,6 +19,11 @@
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
+		<write.classes>-Dwrite.classes=false</write.classes>
+		<clean.classes>-Dclean.classes=false</clean.classes>
+		<included.packages>-Dincluded.packages=ikube</included.packages>
+		<excluded.packages>-Dexcluded.packages=model</excluded.packages>
+		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 	</properties>
 
 	<build>
