--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -79,5 +79,14 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<dependencies>
+		<dependency>
+			<groupId>ikube</groupId>
+			<artifactId>ikube-tools</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 </project>
