Updated some tests and a little more re-factoring before the UI implementation.
git-svn-id: http://ikube.googlecode.com/svn/trunk@380 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -61,9 +61,14 @@
 				<version>2.6</version>
 				<configuration>
 					<argLine></argLine>
+					<forkMode>pertest</forkMode>
 					<includes>
-						<include>**/*.java</include>
+						<include>**/*Integration*.java</include>
 					</includes>
+					<excludes>
+						<exclude>**/*Test*.java</exclude>
+						<exclude>**/*Strategy*.java</exclude>
+					</excludes>
 				</configuration>
 				<executions>
 					<execution>
