--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,15 +1,16 @@
-max.age=180
+# Ten hours
+max.age=600
 
 buffer.size=128
 compound.file=true
-merge.factor=10
-buffered.docs=10
+merge.factor=1000
+buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
-faq.predicate=where faq.faqid > 0 and published = 1
+faq.predicate=where faq.faqid < 1000000 and published = 1
 patient.predicate=where patient.id > 0 and patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 
