Changed the tests to once rather than pertest.
git-svn-id: http://ikube.googlecode.com/svn/trunk@387 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -61,7 +61,7 @@
 				<version>2.6</version>
 				<configuration>
 					<argLine></argLine>
-					<forkMode>pertest</forkMode>
+					<forkMode>once</forkMode>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
