Updated the to string and the Maven configuration to give the integration tests more memory and to run an new Jvm each test rather than all the tests in one Jvm.
git-svn-id: http://ikube.googlecode.com/svn/trunk@392 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -60,8 +60,8 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<argLine></argLine>
-					<forkMode>once</forkMode>
+					<argLine>-Xms512m -Xmx1500m</argLine>
+					<forkMode>always</forkMode>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
