Changed the pom to once for the integration tests. Ignored the Integration test.
git-svn-id: http://ikube.googlecode.com/svn/trunk@395 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -61,7 +61,7 @@
 				<version>2.6</version>
 				<configuration>
 					<argLine>-Xms512m -Xmx1500m</argLine>
-					<forkMode>always</forkMode>
+					<forkMode>once</forkMode>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
