--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -10,7 +10,7 @@ max.read.length=10000000
 index.directory.path=D:/cluster/indexes
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
-faq.predicate=where faq.faqid < 100000 and published = 1
+faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0 and patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 
