--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -25,7 +25,7 @@
 	</properties>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
+		<finalName>${project.groupId}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
