--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,7 @@
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>/index.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
 	<jsp-config>
