Added some rules for the backup action, and finished the action too. Updated the integration configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@406 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -8,6 +8,7 @@ buffered.docs=100
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=D:/cluster/indexes
+index.directory.path.backup=D:/cluster/indexes/backup
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
