Implemented all the rule tests. Updated the tests that they have no file system conflicts. Removed some un-used code.
git-svn-id: http://ikube.googlecode.com/svn/trunk@408 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,5 +1,5 @@
 # The delay before the scheduled tasks start executing
-delay=400000
+delay=600000
 # The period between notifications for timed tasks
 period=60000
 
@@ -11,6 +11,8 @@ email.handler.threads=1
 
 service.protocol=http
 service.port=8081
-monitoring.service.port=9000
+monitoring.service.port=8082
 web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
+
+ikube.url=http://localhost:9000/ikube/index.html
