Changed the deploy directory in the pom.
git-svn-id: http://ikube.googlecode.com/svn/trunk@409 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -127,7 +127,7 @@
 						<configuration>
 							<tasks verbose="true">
 								<property name="ikube.war" value="target/ikube-war.war" />
-								<property name="tomcat.deploy.directory" value="D:/cluster/apache-tomcat-6.0.29-1/webapps" />
+								<property name="tomcat.deploy.directory" value="D:/apache-tomcat-6.0.26/webapps" />
 								<copy file="${ikube.war}" todir="${tomcat.deploy.directory}" overwrite="true" failonerror="false" />
 							</tasks>
 						</configuration>
