Re-configured the builds in Jenkins to stop and start the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@410 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -18,7 +18,7 @@ tomcat.2.webapps=${tomcat.2}/webapps
 tomcat.3.webapps=${tomcat.3}/webapps
 tomcat.ikube.webapps=${tomcat.ikube}/webapps
 
-tomcat.bin=${tomcat}/bin
+# tomcat.bin=${tomcat}/bin
 tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
