--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -121,14 +121,68 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
+					<!--<execution>
+						<id>cluster.stop.delete</id>
+						<phase>clean</phase>
+						<configuration>
+							<tasks verbose="true">
+								<property name="cluster.directory" value="D:/cluster" />
+								<property name="tomcat.1" value="${cluster.directory}/apache-tomcat-6.0.29-1" />
+								<property name="tomcat.2" value="${cluster.directory}/apache-tomcat-6.0.29-2" />
+								<property name="tomcat.3" value="${cluster.directory}/apache-tomcat-6.0.29-3" />
+								
+								<property name="ikube.dir" value="ikube" />
+								<property name="ikube.war" value="ikube.war" />
+							
+								<antcall target="executeTomcatAction">
+									<param name="action" value="stop" />
+									<param name="tomcat.bin" value="${tomcat.1}/bin" />
+									<param name="tomcat.home" value="${tomcat.1}" />
+								</antcall>
+								<antcall target="executeTomcatAction">
+									<param name="action" value="stop" />
+									<param name="tomcat.bin" value="${tomcat.2}/bin" />
+									<param name="tomcat.home" value="${tomcat.2}" />
+								</antcall>
+								<antcall target="executeTomcatAction">
+									<param name="action" value="stop" />
+									<param name="tomcat.bin" value="${tomcat.3}/bin" />
+									<param name="tomcat.home" value="${tomcat.3}" />
+								</antcall>
+								<target name="executeTomcatAction">
+									<java jar="${tomcat.bin}/bootstrap.jar" dir="${tomcat.bin}" fork="yes" spawn="true">
+										<jvmarg value="-Dcatalina.home=${tomcat.home}" />
+										<arg line="${action}" />
+									</java>
+								</target>
+
+								<delete file="${tomcat.1}/${ikube.war}" failonerror="false" />
+								<delete dir="${tomcat.1}/${ikube.dir}" failonerror="false" />
+								<delete file="${tomcat.2}/${ikube.war}" failonerror="false" />
+								<delete dir="${tomcat.2}/${ikube.dir}" failonerror="false" />
+								<delete file="${tomcat.3}/${ikube.war}" failonerror="false" />
+								<delete dir="${tomcat.3}/${ikube.dir}" failonerror="false" />
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>-->
 					<execution>
-						<id>applet.build.task</id>
+						<id>deploy.war.to.cluster</id>
 						<phase>install</phase>
 						<configuration>
 							<tasks verbose="true">
-								<property name="ikube.war" value="target/ikube-war.war" />
-								<property name="tomcat.deploy.directory" value="D:/apache-tomcat-6.0.26/webapps" />
-								<copy file="${ikube.war}" todir="${tomcat.deploy.directory}" overwrite="true" failonerror="false" />
+								<property name="cluster.directory" value="D:/cluster" />
+								<property name="tomcat.1" value="${cluster.directory}/apache-tomcat-6.0.29-1" />
+								<property name="tomcat.2" value="${cluster.directory}/apache-tomcat-6.0.29-2" />
+								<property name="tomcat.3" value="${cluster.directory}/apache-tomcat-6.0.29-3" />
+								
+								<property name="ikube.war" value="target/ikube.war" />
+								
+								<copy file="${ikube.war}" todir="${tomcat.1}/webapps" overwrite="true" failonerror="false" />
+								<copy file="${ikube.war}" todir="${tomcat.2}/webapps" overwrite="true" failonerror="false" />
+								<copy file="${ikube.war}" todir="${tomcat.3}/webapps" overwrite="true" failonerror="false" />
 							</tasks>
 						</configuration>
 						<goals>
