Updated the start cluster script and added a restore test.
git-svn-id: http://ikube.googlecode.com/svn/trunk@411 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -11,7 +11,7 @@ index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
 
 url=http://ikokoon.ikube.cloudbees.net/index.html
-faq.predicate=where faq.faqid < 10000000 and published = 1
+faq.predicate=where faq.faqid < 100000 and published = 1
 patient.predicate=where patient.id > 0 and patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 
