--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="Deploy Ikube to Cluster" default="deploy.war">
 
-	<property file="scripts/build.properties" />
+	<property file="build.properties" />
 	<property name="ikube.dir" value="ikube-war-${project.version}" />
 	<property name="ikube.war" value="ikube-war-${project.version}.war" />
 	<property name="ikube.jar" value="ikube-core-${project.version}.jar" />
@@ -12,54 +12,6 @@
 
 	<target name="deploy.jar">
 		<copy file="${core.target.directory}/${ikube.jar}" todir="${ikube.client.libs}" overwrite="true" failonerror="true" />
-	</target>
-
-	<target name="deploy.war">
-		<delete dir="${tomcat.webapps}/${ikube.dir}" failonerror="true" />
-		<delete dir="${tomcat.1.webapps}/${ikube.dir}" failonerror="true" />
-		<delete dir="${tomcat.2.webapps}/${ikube.dir}" failonerror="true" />
-		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
-		<!-- delete dir="${tomcat.vm.one.webapps}/${ikube.dir}" failonerror="false" / -->
-		<!-- delete dir="${tomcat.ikube.webapps}/${ikube.dir}" failonerror="false" />
-		<delete dir="${tomcat.ikube.cluster.one.webapps}/${ikube.dir}" failonerror="false" />
-		<delete dir="${tomcat.ikube.cluster.two.webapps}/${ikube.dir}" failonerror="false" />
-		<delete dir="${tomcat.ikube.cluster.three.webapps}/${ikube.dir}" failonerror="false" / -->
-
-		<!-- delete dir="${tomcat.ikube.webapps}/${ikube.dir}" failonerror="true" />
-		<delete dir="${tomcat.ikube.cluster.one.webapps}/${ikube.dir}" failonerror="false" />
-		<delete dir="${tomcat.ikube.cluster.two.webapps}/${ikube.dir}" failonerror="false" />
-		<delete dir="${tomcat.ikube.cluster.three.webapps}/${ikube.dir}" failonerror="false" / -->
-
-		<delete dir="${tomcat.bin}/${indexes}" failonerror="true" />
-		<delete dir="${tomcat.1.bin}/${indexes}" failonerror="true" />
-		<delete dir="${tomcat.2.bin}/${indexes}" failonerror="true" />
-		<delete dir="${tomcat.3.bin}/${indexes}" failonerror="true" />
-		<!-- delete dir="${cluster.directory}/indexes" failonerror="true" / -->
-		<!--delete file="${tomcat.vm.one.bin}/${indexes}" failonerror="false" / -->
-		<!-- delete file="${tomcat.ikube.bin}/${indexes}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.one.bin}/${indexes}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.two.bin}/${indexes}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.three.bin}/${indexes}" failonerror="false" / -->
-
-		<delete file="${tomcat.webapps}/${ikube.war}" failonerror="true" />
-		<delete file="${tomcat.1.webapps}/${ikube.war}" failonerror="true" />
-		<delete file="${tomcat.2.webapps}/${ikube.war}" failonerror="true" />
-		<delete file="${tomcat.3.webapps}/${ikube.war}" failonerror="true" />
-		<!--delete file="${tomcat.vm.one.webapps}/${ikube.war}" failonerror="false" / -->
-		<!-- delete file="${tomcat.ikube.webapps}/${ikube.war}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.one.webapps}/${ikube.war}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.two.webapps}/${ikube.war}" failonerror="false" />
-		<delete file="${tomcat.ikube.cluster.three.webapps}/${ikube.war}" failonerror="false" / -->
-
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="true" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
-		<!--copy file="${target.directory}/${ikube.war}" todir="${tomcat.vm.one.webapps}" overwrite="true" failonerror="false" /-->
-		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.webapps}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.one.webapps}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.two.webapps}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.three.webapps}" overwrite="true" failonerror="false" / -->
 	</target>
 
 	<!-- Works. -->
@@ -103,6 +55,55 @@
 			<jvmarg value="-Dcatalina.home=${tomcat.home}" />
 			<arg line="${action}" />
 		</java>
+	</target>
+
+	<!-- Deployment targets. -->
+	<target name="deploy.war">
+		<delete dir="${tomcat.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.1.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.2.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
+		<!-- delete dir="${tomcat.vm.one.webapps}/${ikube.dir}" failonerror="false" / -->
+		<!-- delete dir="${tomcat.ikube.webapps}/${ikube.dir}" failonerror="false" />
+					<delete dir="${tomcat.ikube.cluster.one.webapps}/${ikube.dir}" failonerror="false" />
+					<delete dir="${tomcat.ikube.cluster.two.webapps}/${ikube.dir}" failonerror="false" />
+					<delete dir="${tomcat.ikube.cluster.three.webapps}/${ikube.dir}" failonerror="false" / -->
+
+		<!-- delete dir="${tomcat.ikube.webapps}/${ikube.dir}" failonerror="true" />
+					<delete dir="${tomcat.ikube.cluster.one.webapps}/${ikube.dir}" failonerror="false" />
+					<delete dir="${tomcat.ikube.cluster.two.webapps}/${ikube.dir}" failonerror="false" />
+					<delete dir="${tomcat.ikube.cluster.three.webapps}/${ikube.dir}" failonerror="false" / -->
+
+		<delete dir="${tomcat.bin}/${indexes}" failonerror="true" />
+		<delete dir="${tomcat.1.bin}/${indexes}" failonerror="true" />
+		<delete dir="${tomcat.2.bin}/${indexes}" failonerror="true" />
+		<delete dir="${tomcat.3.bin}/${indexes}" failonerror="true" />
+		<!-- delete dir="${cluster.directory}/indexes" failonerror="true" / -->
+		<!--delete file="${tomcat.vm.one.bin}/${indexes}" failonerror="false" / -->
+		<!-- delete file="${tomcat.ikube.bin}/${indexes}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.one.bin}/${indexes}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.two.bin}/${indexes}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.three.bin}/${indexes}" failonerror="false" / -->
+
+		<delete file="${tomcat.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.1.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.2.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.3.webapps}/${ikube.war}" failonerror="true" />
+		<!--delete file="${tomcat.vm.one.webapps}/${ikube.war}" failonerror="false" / -->
+		<!-- delete file="${tomcat.ikube.webapps}/${ikube.war}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.one.webapps}/${ikube.war}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.two.webapps}/${ikube.war}" failonerror="false" />
+					<delete file="${tomcat.ikube.cluster.three.webapps}/${ikube.war}" failonerror="false" / -->
+
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
+		<!--copy file="${target.directory}/${ikube.war}" todir="${tomcat.vm.one.webapps}" overwrite="true" failonerror="false" /-->
+		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.webapps}" overwrite="true" failonerror="false" />
+					<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.one.webapps}" overwrite="true" failonerror="false" />
+					<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.two.webapps}" overwrite="true" failonerror="false" />
+					<copy file="${target.directory}/${ikube.war}" todir="${tomcat.ikube.cluster.three.webapps}" overwrite="true" failonerror="false" / -->
 	</target>
 
 	<!-- Doesn't work. -->
