Added the geospatial data generator.
git-svn-id: http://ikube.googlecode.com/svn/trunk@427 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -1,7 +1,7 @@
 # The delay before the scheduled tasks start executing
-delay=600000
+delay=60000000
 # The period between notifications for timed tasks
-period=60000
+period=6000000
 
 # The number of threads for each indexing component
 table.handler.threads=3
