Added the Canyon dependency.
git-svn-id: http://ikube.googlecode.com/svn/trunk@429 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -558,6 +558,13 @@
 			<artifactId>flatpack</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+			<dependency>
+				<groupId>canyon</groupId>
+				<artifactId>canyon</artifactId>
+				<version>0.9.8</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
 	</dependencies>
 
 	<repositories>
